-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.8.0 RC
-
None
-
All operating systems.
In QLogValueAxis class signals labelFormatChanged and baseChanged are emitted even if the corresponding values didn't actually change.
For Gerrit Dashboard: QTBUG-57866 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
181066,5 | Fix invalid property signals in QLogValueAxis class | dev | qt/qtcharts | Status: MERGED | +2 | 0 |