Fix invalid property signals in QLogValueAxis class

- fixed QLogValueAxis::labelFormat property signal
  - fixed QLogValueAxis::base property signal

Task-number: QTBUG-57866
Change-Id: I6e5ca3b72abd3fd48afa426583f98ca8347e1d1a
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>